<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/label_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/height"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/data_height"
        android:layout_alignBottom="@+id/label_height"
        android:layout_alignLeft="@+id/data_weight"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/label_height"
        android:text="@string/height"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_weight"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/label_height"
        android:text="@string/weight"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/data_weight"
        android:layout_alignBottom="@+id/label_weight"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/label_weight"
        android:layout_marginLeft="10dp"
        android:text="@string/weight_default"
        android:inputType="numberDecimal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/data_weight"
        android:layout_marginTop="50dp"
        android:onClick="goBack"
        android:text="@string/done"/>

</RelativeLayout>